bindings/c/whiteout_m3.h

typedef struct whiteout_M3ReflectionMaterial whiteout_M3ReflectionMaterial;
typedef struct whiteout_M3SubFlare whiteout_M3SubFlare;
typedef struct whiteout_M3LensFlare whiteout_M3LensFlare;
typedef struct whiteout_M3DataDrivenProperty whiteout_M3DataDrivenProperty;
typedef struct whiteout_M3DataDrivenGroup whiteout_M3DataDrivenGroup;
typedef struct whiteout_M3DataDrivenProperties whiteout_M3DataDrivenProperties;
typedef struct whiteout_M3StandardMaterialConversion whiteout_M3StandardMaterialConversion;
typedef struct whiteout_M3DataDrivenMaterial whiteout_M3DataDrivenMaterial;
void whiteout_m3_M3ReflectionMaterial_set_name(whiteout_M3ReflectionMaterial* self, const char* value);
/* Unknown field */
uint32_t whiteout_m3_M3ReflectionMaterial_get_unknown(const whiteout_M3ReflectionMaterial* self);
void whiteout_m3_M3ReflectionMaterial_set_unknown(whiteout_M3ReflectionMaterial* self, uint32_t value);
/* Reflection flags (v2+) */
int32_t whiteout_m3_M3ReflectionMaterial_get_flags(const whiteout_M3ReflectionMaterial* self);
void whiteout_m3_M3ReflectionMaterial_set_flags(whiteout_M3ReflectionMaterial* self, int32_t value);
/* Unknown field */
uint32_t whiteout_m3_M3ReflectionMaterial_get_unknown2(const whiteout_M3ReflectionMaterial* self);
void whiteout_m3_M3ReflectionMaterial_set_unknown2(whiteout_M3ReflectionMaterial* self, uint32_t value);
/* ── M3SubFlare ─────────────────────────────────────────────── */

/* LFSB — Sub-flare element (v0–v2, 56 bytes) */
/*  */
/* A single flare element within a LensFlare material, with position, size, scale, fade, color, and offset parameters. */
whiteout_M3SubFlare* whiteout_m3_M3SubFlare_new(void);
void whiteout_m3_M3SubFlare_delete(whiteout_M3SubFlare* self);
/* Flare element index */
uint32_t whiteout_m3_M3SubFlare_get_index(const whiteout_M3SubFlare* self);
void whiteout_m3_M3SubFlare_set_index(whiteout_M3SubFlare* self, uint32_t value);
/* Position along the flare axis (0–1) */
float whiteout_m3_M3SubFlare_get_position(const whiteout_M3SubFlare* self);
void whiteout_m3_M3SubFlare_set_position(whiteout_M3SubFlare* self, float value);
/* Base size (width, height) */
whiteout_Vector2f* whiteout_m3_M3SubFlare_get_sizeXY(whiteout_M3SubFlare* self);
void whiteout_m3_M3SubFlare_set_sizeXY(whiteout_M3SubFlare* self, const whiteout_Vector2f* value);
/* Scale multiplier (width, height) */
whiteout_Vector2f* whiteout_m3_M3SubFlare_get_scaleXY(whiteout_M3SubFlare* self);
void whiteout_m3_M3SubFlare_set_scaleXY(whiteout_M3SubFlare* self, const whiteout_Vector2f* value);
/* Fade-in range (start, end) */
whiteout_Vector2f* whiteout_m3_M3SubFlare_get_fadeIn(whiteout_M3SubFlare* self);
void whiteout_m3_M3SubFlare_set_fadeIn(whiteout_M3SubFlare* self, const whiteout_Vector2f* value);
/* Fade-out range (start, end) */
whiteout_Vector2f* whiteout_m3_M3SubFlare_get_fadeOut(whiteout_M3SubFlare* self);
void whiteout_m3_M3SubFlare_set_fadeOut(whiteout_M3SubFlare* self, const whiteout_Vector2f* value);
/* Whether to face the flare center */
uint32_t whiteout_m3_M3SubFlare_get_faceCenter(const whiteout_M3SubFlare* self);
void whiteout_m3_M3SubFlare_set_faceCenter(whiteout_M3SubFlare* self, uint32_t value);
/* Offset from flare center */
whiteout_Vector2f* whiteout_m3_M3SubFlare_get_offset(whiteout_M3SubFlare* self);
void whiteout_m3_M3SubFlare_set_offset(whiteout_M3SubFlare* self, const whiteout_Vector2f* value);
/* ── M3LensFlare ─────────────────────────────────────────────── */

/* LFLR — Lens flare material (v0–v3, 152 bytes) */
/*  */
/* Lens flare effect with animated intensity, color, HDR, size, sub-flare elements, and flipbook texture grid parameters. */
whiteout_M3LensFlare* whiteout_m3_M3LensFlare_new(void);
void whiteout_m3_M3LensFlare_delete(whiteout_M3LensFlare* self);
/* Flare name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3LensFlare_get_name(const whiteout_M3LensFlare* self);
void whiteout_m3_M3LensFlare_set_name(whiteout_M3LensFlare* self, const char* value);
/* Sub-flare elements (LFSB) */
size_t whiteout_m3_M3LensFlare_get_subFlares_count(const whiteout_M3LensFlare* self);
whiteout_M3SubFlare* whiteout_m3_M3LensFlare_get_subFlares_at(whiteout_M3LensFlare* self, size_t index);
/* Flipbook grid columns */
uint32_t whiteout_m3_M3LensFlare_get_columns(const whiteout_M3LensFlare* self);
void whiteout_m3_M3LensFlare_set_columns(whiteout_M3LensFlare* self, uint32_t value);
/* Flipbook grid rows */
uint32_t whiteout_m3_M3LensFlare_get_rows(const whiteout_M3LensFlare* self);
void whiteout_m3_M3LensFlare_set_rows(whiteout_M3LensFlare* self, uint32_t value);
/* Distance fade start */
float whiteout_m3_M3LensFlare_get_distanceFade(const whiteout_M3LensFlare* self);
void whiteout_m3_M3LensFlare_set_distanceFade(whiteout_M3LensFlare* self, float value);
/* Library name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3LensFlare_get_libName(const whiteout_M3LensFlare* self);
void whiteout_m3_M3LensFlare_set_libName(whiteout_M3LensFlare* self, const char* value);
/* ── M3DataDrivenProperty ─────────────────────────────────────────────── */

/* One decoded property of a data-driven material */
/*  */
/* `data` is the raw value; its shape depends on `size`: 4 = scalar (f32, u32 enum, or BGRA colour — depends on the property), 8 = `{u32 index into DataDrivenMaterial::texturePaths, u32 texture source}`, 12 = 3 floats, 16 = 4 floats, 20 = `{u32 ColorChannelSelect, f32 multiply, f32 add, f32, u16 flags}`, 32 = `{f32 offsetU/V, tilingU/V, angleU/V/W, u32 flags}`, 48 = fresnel `{u32 FresnelMode, f32 exponent, min, max, rotation, mask}`. */
whiteout_M3DataDrivenProperty* whiteout_m3_M3DataDrivenProperty_new(void);
void whiteout_m3_M3DataDrivenProperty_delete(whiteout_M3DataDrivenProperty* self);
/* crc32 of the property name */
uint32_t whiteout_m3_M3DataDrivenProperty_get_nameHash(const whiteout_M3DataDrivenProperty* self);
void whiteout_m3_M3DataDrivenProperty_set_nameHash(whiteout_M3DataDrivenProperty* self, uint32_t value);
/* Resolved name, empty when the hash is unknown */
whiteout_CString whiteout_m3_M3DataDrivenProperty_get_name(const whiteout_M3DataDrivenProperty* self);
void whiteout_m3_M3DataDrivenProperty_set_name(whiteout_M3DataDrivenProperty* self, const char* value);
/* ── M3DataDrivenGroup ─────────────────────────────────────────────── */

/* One shader fragment of a data-driven material, with its properties */
whiteout_M3DataDrivenGroup* whiteout_m3_M3DataDrivenGroup_new(void);
void whiteout_m3_M3DataDrivenGroup_delete(whiteout_M3DataDrivenGroup* self);
/* crc32 of the fragment name */
uint32_t whiteout_m3_M3DataDrivenGroup_get_nameHash(const whiteout_M3DataDrivenGroup* self);
void whiteout_m3_M3DataDrivenGroup_set_nameHash(whiteout_M3DataDrivenGroup* self, uint32_t value);
/* Resolved name, empty when unknown */
whiteout_CString whiteout_m3_M3DataDrivenGroup_get_name(const whiteout_M3DataDrivenGroup* self);
void whiteout_m3_M3DataDrivenGroup_set_name(whiteout_M3DataDrivenGroup* self, const char* value);
/* Properties, in stored order */
size_t whiteout_m3_M3DataDrivenGroup_get_properties_count(const whiteout_M3DataDrivenGroup* self);
whiteout_M3DataDrivenProperty* whiteout_m3_M3DataDrivenGroup_get_properties_at(whiteout_M3DataDrivenGroup* self, size_t index);
/* ── M3DataDrivenProperties ─────────────────────────────────────────────── */

/* The decoded contents of DataDrivenMaterial::propertyBlob */
whiteout_M3DataDrivenProperties* whiteout_m3_M3DataDrivenProperties_new(void);
void whiteout_m3_M3DataDrivenProperties_delete(whiteout_M3DataDrivenProperties* self);
/* Fragment groups, in stored order */
size_t whiteout_m3_M3DataDrivenProperties_get_groups_count(const whiteout_M3DataDrivenProperties* self);
whiteout_M3DataDrivenGroup* whiteout_m3_M3DataDrivenProperties_get_groups_at(whiteout_M3DataDrivenProperties* self, size_t index);
/* ── M3StandardMaterialConversion ─────────────────────────────────────────────── */

/* Outcome of rebuilding a StandardMaterial from a DataDrivenMaterial */
/*  */
/* Not every data-driven material has a standard equivalent: some were authored directly against the shader-graph vocabulary, and others are the converted form of a DisplacementMaterial or ReflectionMaterial. `blocker` says which. */
/*  */
/* Conversion is lossy even when it succeeds, because the forward direction is: variant fragments collapse onto one layer slot, several fragments are derived from the model rather than the material, and per-field animation links are not carried in the blob. `lossy` lists what was dropped for this material. */
whiteout_M3StandardMaterialConversion* whiteout_m3_M3StandardMaterialConversion_new(void);
void whiteout_m3_M3StandardMaterialConversion_delete(whiteout_M3StandardMaterialConversion* self);
/* Whether `material` was produced */
int32_t whiteout_m3_M3StandardMaterialConversion_get_converted(const whiteout_M3StandardMaterialConversion* self);
void whiteout_m3_M3StandardMaterialConversion_set_converted(whiteout_M3StandardMaterialConversion* self, int32_t value);
/* Why not, when `converted` is false */
whiteout_CString whiteout_m3_M3StandardMaterialConversion_get_blocker(const whiteout_M3StandardMaterialConversion* self);
void whiteout_m3_M3StandardMaterialConversion_set_blocker(whiteout_M3StandardMaterialConversion* self, const char* value);
/* ── M3DataDrivenMaterial ─────────────────────────────────────────────── */

/* MADD — Data-driven material (v0–v3, 140–160 bytes) */
/*  */
/* The engine's own name for this chunk is `SDataDrivenMaterialData`. It is not "additional" data: at load the renderer converts every StandardMaterial (1), DisplacementMaterial (2) and ReflectionMaterial (10) in the model into one of these and rewrites the MaterialMap to MaterialType::DataDriven, so this is the only material representation the renderer actually consumes. */
/*  */
/* `fragmentHashes` names the shader fragments the material links, in order. Concatenating `shaderType`'s token with those names gives the shader permutation name, and its crc32 is the effect-cache lookup key. */
/*  */
/* `propertyBlob` is a self-describing two-level dictionary keyed by crc32 of unprefixed names — decode it with decodeProperties(). */
/*  */
/* @see M3_FILE_FORMAT_SPECIFICATION.md §11 Materials */
whiteout_M3DataDrivenMaterial* whiteout_m3_M3DataDrivenMaterial_new(void);
void whiteout_m3_M3DataDrivenMaterial_delete(whiteout_M3DataDrivenMaterial* self);
/* Material name (Ref<CHAR>) */
whiteout_CString whiteout_m3_M3DataDrivenMaterial_get_materialName(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_materialName(whiteout_M3DataDrivenMaterial* self, const char* value);
/* 1.0, 1.5 or 2.0 across the corpus */
float whiteout_m3_M3DataDrivenMaterial_get_unknown108(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_unknown108(whiteout_M3DataDrivenMaterial* self, float value);
/* 1.0 in every known record */
float whiteout_m3_M3DataDrivenMaterial_get_unknown112(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_unknown112(whiteout_M3DataDrivenMaterial* self, float value);
float whiteout_m3_M3DataDrivenMaterial_get_unknown116(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_unknown116(whiteout_M3DataDrivenMaterial* self, float value);
/* crc32 of the shader permutation name; 0 = compute it at load */
uint32_t whiteout_m3_M3DataDrivenMaterial_get_effectNameHash(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_effectNameHash(whiteout_M3DataDrivenMaterial* self, uint32_t value);
uint32_t whiteout_m3_M3DataDrivenMaterial_get_unknown124(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_unknown124(whiteout_M3DataDrivenMaterial* self, uint32_t value);
/* Zero in every known record */
uint32_t whiteout_m3_M3DataDrivenMaterial_get_padding128(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_padding128(whiteout_M3DataDrivenMaterial* self, uint32_t value);
int32_t whiteout_m3_M3DataDrivenMaterial_get_unknown132(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_unknown132(whiteout_M3DataDrivenMaterial* self, int32_t value);
/* Packed bit field */
uint32_t whiteout_m3_M3DataDrivenMaterial_get_unknown136(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_unknown136(whiteout_M3DataDrivenMaterial* self, uint32_t value);
uint32_t whiteout_m3_M3DataDrivenMaterial_get_unknown140(const whiteout_M3DataDrivenMaterial* self);
void whiteout_m3_M3DataDrivenMaterial_set_unknown140(whiteout_M3DataDrivenMaterial* self, uint32_t value);