bindings/csharp/Whiteout/M3/NativeMethods.M3.cs


    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ReflectionMaterial_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ReflectionMaterial_get_unknown(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ReflectionMaterial_set_unknown(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3ReflectionMaterial_get_flags(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ReflectionMaterial_set_flags(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3ReflectionMaterial_get_unknown2(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3ReflectionMaterial_set_unknown2(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3SubFlare_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SubFlare_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3SubFlare_get_index(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SubFlare_set_index(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3SubFlare_get_position(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SubFlare_set_position(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3SubFlare_get_sizeXY(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SubFlare_set_sizeXY(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3SubFlare_get_scaleXY(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SubFlare_set_scaleXY(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3SubFlare_get_fadeIn(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SubFlare_set_fadeIn(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3SubFlare_get_fadeOut(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SubFlare_set_fadeOut(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3SubFlare_get_faceCenter(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SubFlare_set_faceCenter(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3SubFlare_get_offset(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3SubFlare_set_offset(IntPtr self, IntPtr value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3LensFlare_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3LensFlare_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3LensFlare_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3LensFlare_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m3_M3LensFlare_get_subFlares_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3LensFlare_get_subFlares_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3LensFlare_get_columns(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3LensFlare_set_columns(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3LensFlare_get_rows(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3LensFlare_set_rows(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3LensFlare_get_distanceFade(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3LensFlare_set_distanceFade(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3LensFlare_get_libName(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3LensFlare_set_libName(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3DataDrivenProperty_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenProperty_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3DataDrivenProperty_get_nameHash(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenProperty_set_nameHash(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3DataDrivenProperty_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenProperty_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3DataDrivenGroup_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenGroup_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3DataDrivenGroup_get_nameHash(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenGroup_set_nameHash(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3DataDrivenGroup_get_name(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenGroup_set_name(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m3_M3DataDrivenGroup_get_properties_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3DataDrivenGroup_get_properties_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3DataDrivenProperties_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenProperties_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial nuint whiteout_m3_M3DataDrivenProperties_get_groups_count(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3DataDrivenProperties_get_groups_at(IntPtr self, nuint index);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3StandardMaterialConversion_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3StandardMaterialConversion_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3StandardMaterialConversion_get_converted(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3StandardMaterialConversion_set_converted(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3StandardMaterialConversion_get_blocker(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3StandardMaterialConversion_set_blocker(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial IntPtr whiteout_m3_M3DataDrivenMaterial_new();

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_delete(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial Whiteout.Common.NativeCString whiteout_m3_M3DataDrivenMaterial_get_materialName(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_materialName(IntPtr self, [MarshalAs(UnmanagedType.LPUTF8Str)] string value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3DataDrivenMaterial_get_unknown108(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_unknown108(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3DataDrivenMaterial_get_unknown112(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_unknown112(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial float whiteout_m3_M3DataDrivenMaterial_get_unknown116(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_unknown116(IntPtr self, float value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3DataDrivenMaterial_get_effectNameHash(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_effectNameHash(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3DataDrivenMaterial_get_unknown124(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_unknown124(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3DataDrivenMaterial_get_padding128(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_padding128(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial int whiteout_m3_M3DataDrivenMaterial_get_unknown132(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_unknown132(IntPtr self, int value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3DataDrivenMaterial_get_unknown136(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_unknown136(IntPtr self, uint value);


    [LibraryImport(Runtime.LibraryName)]
    internal static partial uint whiteout_m3_M3DataDrivenMaterial_get_unknown140(IntPtr self);

    [LibraryImport(Runtime.LibraryName)]
    internal static partial void whiteout_m3_M3DataDrivenMaterial_set_unknown140(IntPtr self, uint value);

